fix: inline jsx and comment parsing error, close #4, #7

--- a/test/fixture1.mdx
+++ b/test/fixture1.mdx
@@ -16,9 +16,7 @@ Lorem ipsum dolor sit amet, consectetur adipiscing **elit**. Ut ac lobortis <b>v
 }
 ```
 
-<Component>
-  {/* This is a comment */}
-</Component>
+<Component>{/* This is a comment */}</Component>
 
 ## Subtitle
 
