feat: add body and comments into ast, fix #12

--- a/test/fixture4.mdx
+++ b/test/fixture4.mdx
@@ -8,11 +8,8 @@ route: /follow-reveal
 A `<FollowReveal>` is a like a `<TurnReveal>` that follows the mouse's movements in and out of the component.
 Just like the `<TurnReveal>`, place it in an element that has `position: relative` and make sure it is a direct child of the element on which you define the `perspective` property.
 
-import { Props, Playground } from 'docz'
 import FollowReveal from './FollowReveal'
-import { Front, PlaceHolderImage, Grid } from 'docs/PlayGroundUtils'
-
-<Props of={FollowReveal} />
+import { Grid, Front, PlaceHolderImage, Playground } from './Playground'
 
 ## Basic Usage
 
