--- a/test/fixture1.mdx
+++ b/test/fixture1.mdx
@@ -18,7 +18,9 @@ Lorem ipsum dolor sit amet, consectetur adipiscing **elit**. Ut ac lobortis <b>v
 
 <Component>{/* This is a comment */}</Component>
 
-<Component><!-- This is a comment -->In JSX!<!-- This is a comment --></Component>
+<Component>
+  {/** This is a comment */}In JSX!{/** This is a comment */}
+</Component>
 
 ## Subtitle
 
