--- a/test/fixture1.mdx
+++ b/test/fixture1.mdx
@@ -1,27 +1,5 @@
 import Component from './component'
 
-export const meta = {
-  title: 'Blog Post',
-}
-
-# Blog Post
-
-Lorem ipsum dolor sit amet, consectetur adipiscing **elit**. Ut ac lobortis <b>velit</b>.
-
-<!-- This is a comment -->
-
-```css
-@media (min-width: 400px) {
-  border-color: #000;
-}
-```
-
-<Component>{/* This is a comment */}</Component>
-
-<Component>
-  {/** This is a comment */}In JSX!{/** This is a comment */}
-</Component>
-
-## Subtitle
-
-Lorem ipsum dolor sit _amet_, consectetur adipiscing elit. Ut ac lobortis velit.
+Inline <Component><!-- This is a comment -->In >
+ JSX!<!-- This is a
+comment --> > <!-- This is a comment --></Component>
