--- a/test/fixtures/basic.mdx
+++ b/test/fixtures/basic.mdx
@@ -1,4 +1,4 @@
-import Component from './component'
+import { Basic } from './basic'
 
 export const meta = {
   title: 'Blog Post',
@@ -16,15 +16,15 @@ Lorem ipsum dolor sit amet, consectetur adipiscing **elit**. Ut ac lobortis <b>v
 }
 ```
 
-<Component>{/* This is a comment */}</Component>
+<Basic>{/* This is a comment */}</Basic>
 
-<Component>
+<Basic>
   {/** This is a comment */}In JSX!{/** This is a comment */}
-</Component>
+</Basic>
 
-Inline <Component><!-- This is a comment -->In &gt;
+Inline <Basic><!-- This is a comment -->In &gt;
 JSX!<!-- This is a
-comment --> &gt; <!-- This is a comment --></Component>
+comment --> &gt; <!-- This is a comment --></Basic>
 
 ## Subtitle
 
