--- a/test/fixtures/basic.mdx
+++ b/test/fixtures/basic.mdx
@@ -1,4 +1,4 @@
-import { Basic } from './basic'
+import Basic from './basic'
 
 export const meta = {
   title: 'Blog Post',
@@ -16,15 +16,9 @@ Lorem ipsum dolor sit amet, consectetur adipiscing **elit**. Ut ac lobortis <b>v
 }
 ```
 
-<Basic>{/* This is a comment */}</Basic>
-
 <Basic>
-  {/** This is a comment */}In JSX!{/** This is a comment */}
+  {/* This is a comment */}
 </Basic>
-
-Inline <Basic><!-- This is a comment -->In &gt;
-JSX!<!-- This is a
-comment --> &gt; <!-- This is a comment --></Basic>
 
 ## Subtitle
 
