test: add more unit and e2e tests

--- a/test/fixtures/basic.mdx
+++ b/test/fixtures/basic.mdx
@@ -1,6 +1,6 @@
 import Basic from './basic'
 
-export const meta = {
+export const meta={
   title: 'Blog Post',
 }
 
@@ -16,9 +16,7 @@ Lorem ipsum dolor sit amet, consectetur adipiscing **elit**. Ut ac lobortis <b>v
 }
 ```
 
-<Basic>
-  {/* This is a comment */}
-</Basic>
+<Basic>{/* This is a comment */}</Basic>
 
 ## Subtitle
 
