--- a/test/fixtures/no-jsx-html-comments.mdx
+++ b/test/fixtures/no-jsx-html-comments.mdx
@@ -2,3 +2,6 @@
 
 <header>Header<!-- JSX HTML comment --></header>
 <main>Main Content</main>
+
+Inline <header>Header<!-- JSX HTML comment --></header>
+<main>Main Content</main>
