--- a/test/fixtures/no-jsx-html-comments.mdx
+++ b/test/fixtures/no-jsx-html-comments.mdx
@@ -3,5 +3,10 @@
 <header>Header<!-- JSX HTML comment --></header>
 <main>Main Content</main>
 
+<header>Header
+<!-- JSX
+HTML comment --></header>
+<main>Main Content</main>
+
 Inline <header>Header<!-- JSX HTML comment --></header>
 <main>Main Content</main>
