feat: add support for eslint 8 (#353)

--- a/test/fixtures/comments.mdx
+++ b/test/fixtures/comments.mdx
@@ -1,1 +1,5 @@
-<!-- eslint-disable-next-line no-console -- Here's a description about why this configuration is necessary. -->
+# Header
+<!-- eslint-disable mdx/remark -- Here's a description about why this configuration is necessary. -->
+# Header
+<!-- eslint-enable mdx/remark -->
+# Title
